Terraform-labs/first_ec2.tf
/*provider "aws" {
  region = "us-west-2"
  access_key = "AKIATTM7IKLJNMPWJTNC"
  secret_key = "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"
}*/
/*
resource "aws_instance" "my_ec2" {
  ami = "ami-0ca285d4c2cda3300"
  instance_type = "t2.micro"
}


provider "azurerm" {}
*/
